fixed color in project title

--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
                             <div class="bg-primary/20 p-2 rounded-lg mr-3">
                                 <i data-feather="code" class="text-primary"></i>
                             </div>
-                            <h3 class="text-xl font-semibold text-gray-800 dark:text-white">E-commerce Platform</h3>
+                            <h3 class="text-xl font-semibold text-gray-800 dark:text-light">E-commerce Platform</h3>
                         </div>
                         <p class="text-gray-600 dark:text-gray-400 mb-4">
                             A full-featured e-commerce platform with payment integration, product management, and user authentication.
@@ -449,7 +449,7 @@
                             <div class="bg-primary/20 p-2 rounded-lg mr-3">
                                 <i data-feather="code" class="text-primary"></i>
                             </div>
-                            <h3 class="text-xl font-semibold text-gray-800 dark:text-white">Task Management App</h3>
+                            <h3 class="text-xl font-semibold text-gray-800 dark:text-light">Task Management App</h3>
                         </div>
                         <p class="text-gray-600 dark:text-gray-400 mb-4">
                             A collaborative task management application with real-time updates, drag-and-drop interface, and team features.
@@ -480,7 +480,7 @@
                             <div class="bg-primary/20 p-2 rounded-lg mr-3">
                                 <i data-feather="code" class="text-primary"></i>
                             </div>
-                            <h3 class="text-xl font-semibold text-gray-800 dark:text-white">Portfolio Website</h3>
+                            <h3 class="text-xl font-semibold text-gray-800 dark:text-light">Portfolio Website</h3>
                         </div>
                         <p class="text-gray-600 dark:text-gray-400 mb-4">
                             A responsive portfolio website showcasing projects, skills, and contact information with smooth animations.
