--- a/index.html
+++ b/index.html
@@ -576,16 +576,16 @@
                     <div class="mt-8">
                         <h4 class="font-medium mb-4 text-gray-800 dark:text-white">Follow Me</h4>
                         <div class="flex space-x-4">
-                            <a href="#" class="w-10 h-10 bg-white dark:bg-gunmetal rounded-full shadow-md flex items-center justify-center text-primary hover:bg-primary hover:text-black border border-primary/30 transition duration-300">
+                            <a href="https://github.com/Mafuzur22" class="w-10 h-10 bg-white dark:bg-gunmetal rounded-full shadow-md flex items-center justify-center text-primary hover:bg-primary hover:text-black border border-primary/30 transition duration-300">
                                 <i data-feather="github"></i>
                             </a>
-                            <a href="#" class="w-10 h-10 bg-white dark:bg-gunmetal rounded-full shadow-md flex items-center justify-center text-primary hover:bg-primary hover:text-black border border-primary/30 transition duration-300">
+                            <a href="https://www.linkedin.com/in/mafuzur22/" class="w-10 h-10 bg-white dark:bg-gunmetal rounded-full shadow-md flex items-center justify-center text-primary hover:bg-primary hover:text-black border border-primary/30 transition duration-300">
                                 <i data-feather="linkedin"></i>
                             </a>
-                            <a href="#" class="w-10 h-10 bg-white dark:bg-gunmetal rounded-full shadow-md flex items-center justify-center text-primary hover:bg-primary hover:text-black border border-primary/30 transition duration-300">
+                            <!-- <a href="#" class="w-10 h-10 bg-white dark:bg-gunmetal rounded-full shadow-md flex items-center justify-center text-primary hover:bg-primary hover:text-black border border-primary/30 transition duration-300">
                                 <i data-feather="twitter"></i>
-                            </a>
-                            <a href="#" class="w-10 h-10 bg-white dark:bg-gunmetal rounded-full shadow-md flex items-center justify-center text-primary hover:bg-primary hover:text-black border border-primary/30 transition duration-300">
+                            </a> -->
+                            <a href="https://www.facebook.com/people/Mahafuzur-Rahaman/61579721319071/" class="w-10 h-10 bg-white dark:bg-gunmetal rounded-full shadow-md flex items-center justify-center text-primary hover:bg-primary hover:text-black border border-primary/30 transition duration-300">
                                 <i data-feather="facebook"></i>
                             </a>
                         </div>
@@ -633,9 +633,9 @@
                     <a href="https://www.linkedin.com/in/mafuzur22" target="_blank" class="text-gray-400 hover:text-white transition duration-300">
                         <i data-feather="linkedin"></i>
                     </a>
-                    <a href="#" target="_blank" class="text-gray-400 hover:text-white transition duration-300">
+                    <!-- <a href="#" target="_blank" class="text-gray-400 hover:text-white transition duration-300">
                         <i data-feather="twitter"></i>
-                    </a>
+                    </a> -->
                     <a href="https://www.facebook.com/people/Mahafuzur-Rahaman/61579721319071/" target="_blank" class="text-gray-400 hover:text-white transition duration-300">
                         <i data-feather="facebook"></i>
                     </a>
