--- a/index.html
+++ b/index.html
@@ -138,14 +138,19 @@
 
 
     <!-- Hero Section -->
-    <section id="home" class="bg-dark dark:bg-dark min-h-screen flex items-center pt-16">
-        <div class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8 py-20">
+    <section id="home" class="bg-dark dark:bg-dark min-h-screen flex items-center pt-20">
+        <div class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8 py-10">
             <div class="flex flex-col md:flex-row items-center">
                 <div class="md:w-1/2 mb-10 md:mb-0" data-aos="fade-right">
+                    <div class="md:w-1/3 mb-10 md:mb-0 flex justify-center pb-10" data-aos="fade-right">
+                    <div class="w-64 h-70 rounded-full overflow-hidden shadow-xl border-2 border-primary/30">
+                        <img src="/images/no_bg_self_headshot.png" alt="About Mahafuzur" class="w-full h-full object-cover rounded-full">
+                    </div>
+                </div>
                     <h1 class="text-4xl md:text-5xl lg:text-6xl font-bold mb-4 text-gray-800 dark:text-white">
                         Hi, I'm <span class="gradient-text">Mahafuzur Rahman</span>
                     </h1>
-                    <h2 class="text-2xl md:text-3xl text-gray-600 dark:text-gray-400 mb-6">Full Stack Python Developer</h2>
+                    <h2 class="text-2xl md:text-3xl text-gray-600 dark:text-gray-400 mb-6 leading-tight">Full Stack Python Developer</h2>
                     <p class="text-gray-600 dark:text-gray-400 mb-8 max-w-lg">
                         I build exceptional digital experiences with modern technologies. Passionate about creating efficient, scalable, and user-friendly applications.
                     </p>
@@ -244,7 +249,7 @@
                             </div>
                         </div>
                     </div>
-                    <a href="/images/WEB LINKED MD MAHAFUZUR RAHAMAN RESUME.pdf" class="inline-flex items-center text-primary font-medium hover:text-secondary transition">
+                    <a href="/images/L MD MAHAFUZUR RAHAMAN RESUME LINK IMAGE EXP.pdf" class="inline-flex items-center text-primary font-medium hover:text-secondary transition">
                         Download Resume <i data-feather="download" class="ml-2"></i>
                     </a>
                 </div>
